<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.shakdwipeea.tuesday.profile.ProfileActivity">

    <item
        android:id="@+id/action_save_details"
        android:title="@string/done"
        app:showAsAction="always" />
</menu>
